# Industrial_MCP_server

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  compose.yaml
.github/agents/: deepseek.agent.md
.github/workflows/: ci.yml
config/: config.example.json  config.opcua-sim.json
data/: alarms.example.jsonl
deploy/prometheus/: prometheus.yml
deploy/systemd/: industrial-mcp-server.service
docs/: final-acceptance-matrix.md  mcp-client.md  operations.md
include/industrial_mcp/: alarm_store.hpp  audit_logger.hpp  config.hpp  device_connection_manager.hpp  device_state_cache.hpp  diagnostics.hpp  http_server.hpp  industrial_connector.hpp  json.hpp  mcp_server.hpp  observability.hpp  opcua_client.hpp  storage_backend.hpp
include/industrial_mcp/alarm/: alarm_store.hpp
include/industrial_mcp/connector/: industrial_connector.hpp  opcua_client.hpp
include/industrial_mcp/device/: device_state_cache.hpp
include/industrial_mcp/diagnosis/: diagnostics.hpp
include/industrial_mcp/mcp/: config.hpp  json.hpp  mcp_server.hpp
include/industrial_mcp/observability/: audit_logger.hpp  http_server.hpp  observability.hpp
include/industrial_mcp/reliability/: device_connection_manager.hpp
include/industrial_mcp/storage/: storage_backend.hpp
src/: alarm_store.cpp  audit_logger.cpp  config.cpp  device_state_cache.cpp  diagnostics.cpp  json.cpp  main.cpp  mcp_server.cpp  opcua_client.cpp  opcua_sim_server.cpp
src/alarm/: alarm_store.cpp
src/connector/: industrial_connector.cpp  opcua_client.cpp  opcua_sim_server.cpp
src/device/: device_state_cache.cpp
src/diagnosis/: diagnostics.cpp
src/mcp/: config.cpp  json.cpp  mcp_server.cpp
src/observability/: audit_logger.cpp  http_server.cpp  observability.cpp
src/reliability/: device_connection_manager.cpp
src/storage/: storage_backend.cpp
tests/: test_core.cpp
tests/fault_injection/: test_fault_injection.cpp
tests/integration/: test_integration.cpp
tests/unit/: test_unit.cpp
